# smooth-operator

./: .gitignore  Dockerfile  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: agent-config-instructions-workflow.md  agent-injection-seams.md  auto-title-token-budget.md  backplane-impls.md  backplane.md  confirm-tool-action-hitl.md  core-crates-migration.md  core-sync-pin-ci.md  create-session-derive-org-agent.md  create-smooth-extension.md  cursor-pagination-spec.md  deterministic-workflow-chips.md  dotnet-agent-config-instructions-workflow.md  dotnet-cursor-pagination.md  dotnet-get-conversation-messages.md  dotnet-local-flavor-spa.md  dotnet-pkg-readmes.md  dotnet-scoped-session-chokepoint.md  dotnet-server-addons-publishable.md  dotnet-server-list-resume.md  dotnet-stream-preamble.md  dotnet-turn-cancel.md  dotnet-user-scoped-conversations.md  durable-workflow-step-state.md  eighty-donkeys-smile.md  empty-eventual-response-fallback.md  gateway-key-resolver-seam.md  gentle-pumas-shave.md  get-conversation-messages-action.md  go-codegen-script.md  go-stream-preamble.md  (+89 more)
python/server/: README.md  pyproject.toml
python/server/src/smooth_operator_server/: __init__.py  __main__.py  agent_config.py  auth.py  backplane.py  confirmation.py  dispatcher.py  extensions.py  model_info.py  otp.py  protocol.py  server.py  session_store.py  turn_runner.py  workflow.py
python/server/tests/: test_agent_config.py  test_auth.py  test_confirm_tool_action.py  test_conversation_scoping.py  test_extension_host.py  test_get_conversation_messages.py  test_graceful_drain.py  test_list_conversations_resume.py  test_model_info.py  test_otp_conformance.py  test_otp_flow.py  test_otp_seam.py  test_protocol_conformance.py  test_scenario_parity.py  test_server.py  test_session_auth.py  test_starvation_defaults.py  test_tool_auth_e2e.py  test_tool_hooks_seam.py  test_turn_cancel.py  test_turn_runner_agent_config.py  test_turn_runner_citations.py  test_turn_runner_preamble.py  test_workflow.py
python/server/tests/sep/: echo_peer.py
rust/: .gitignore  Cargo.toml  README.md
rust/adapters/backplane-nats/: Cargo.toml  README.md
rust/adapters/backplane-nats/src/: lib.rs
rust/adapters/backplane-nats/tests/: cross_pod.rs
rust/adapters/backplane-redis/: Cargo.toml  README.md
rust/adapters/backplane-redis/src/: lib.rs
rust/adapters/backplane-redis/tests/: cross_pod.rs
rust/adapters/dynamodb/: Cargo.toml  README.md
rust/adapters/dynamodb/src/: admin.rs  checkpoint.rs  embedder.rs  keys.rs  knowledge.rs  lib.rs  s3vectors.rs
rust/adapters/dynamodb/tests/: admin_conformance.rs  conformance.rs
rust/adapters/in-memory/: Cargo.toml  README.md
rust/adapters/in-memory/src/: lib.rs
rust/adapters/in-memory/tests/: conformance.rs
rust/adapters/postgres/: Cargo.toml  README.md
rust/adapters/postgres/src/: admin.rs  agent_config.rs  embedder.rs  knowledge.rs  lib.rs  memory.rs  schema.rs
rust/adapters/postgres/tests/: admin_conformance.rs  conformance.rs  memory_conformance.rs
rust/evals/: Cargo.toml
rust/evals/src/: lib.rs
rust/evals/tests/: extended_judge.rs  llm_judge.rs
rust/examples/dev-support/: Cargo.toml  README.md
rust/examples/dev-support/src/: ingest.rs  lib.rs  main.rs  serve.rs
rust/examples/dev-support/tests/: serve_smoke.rs
rust/ingestion/: Cargo.toml  README.md
rust/ingestion/src/: indexing.rs  lib.rs  pipeline.rs
rust/ingestion/src/connectors/: github.rs  mod.rs  web.rs
rust/ingestion/tests/: github_connector.rs  incremental_indexing.rs
rust/smooth-agent-core/: Cargo.toml
rust/smooth-agent-core/src/: adapter.rs  domain.rs  lib.rs  runtime.rs
rust/smooth-agent-core/src/tools/: knowledge_search.rs  mod.rs
rust/smooth-agent-core/tests/: e2e_llm_smoo_ai.rs  knowledge_chat_turn.rs
rust/smooth-operator/: Cargo.toml  README.md
rust/smooth-operator-agent-core/: Cargo.toml
rust/smooth-operator-agent-core/src/: embedding.rs  lib.rs  rerank.rs  runtime.rs  telemetry.rs
rust/smooth-operator-agent-core/src/tools/: context.rs  conversation_history.rs  fetch_url.rs  knowledge_search.rs  mod.rs  web_search.rs
rust/smooth-operator-agent-core/tests/: builtin_tools.rs  e2e_llm_smoo_ai.rs  knowledge_chat_turn.rs  telemetry.rs
rust/smooth-operator-agent-lambda/src/: main.rs
rust/smooth-operator-agent-server/src/: config.rs  main.rs  server.rs
rust/smooth-operator-agent-server/tests/: live_ws_e2e.rs  protocol_smoke.rs
rust/smooth-operator-lambda/: Cargo.toml
rust/smooth-operator-lambda/src/: dispatch.rs
rust/smooth-operator-server/: Cargo.toml  README.md
rust/smooth-operator-server/assets/: README.md  chat-widget.iife.js  widget-index.html
rust/smooth-operator-server/src/: admin.rs  config.rs  embedder.rs  extensions.rs  handler.rs  lib.rs  local.rs  protocol.rs  reranker.rs  runner.rs  server.rs  state.rs  suggestions.rs
rust/smooth-operator-server/tests/: acl_chat_leak.rs  acl_trusted_mode.rs  admin_api.rs  admin_publish.rs  admin_write.rs  agent_tool_auth.rs  backplane_delivery.rs  confirm_tool_action.rs  conversation_workflow.rs  create_session_org_agent.rs  empty_reply_fallback.rs  gateway_wire_empty_reply.rs  graceful_drain.rs  identity_intake.rs  injection_seams.rs  interactions.rs  knowledge_org_scoping.rs  list_and_resume.rs  live_ws_e2e.rs  llm_metadata_wire.rs  local_flavor.rs  otp_flow.rs  protocol_smoke.rs  rename_and_autotitle.rs  scenario_parity.rs  sep_extension_host.rs  suggested_replies.rs  telemetry.rs  turn_cancel.rs  user_scoping.rs  widget_auth_enforcement.rs  widget_serving.rs
rust/smooth-operator-server/tests/common/: mod.rs
rust/smooth-operator/src/: access_control.rs  adapter.rs  agent_config.rs  auth.rs  backplane.rs  connector_config.rs  domain.rs  gateway_key.rs  identity_intake.rs  interaction.rs  lib.rs  otp.rs  runtime.rs  settings.rs  telemetry.rs  tool_provider.rs  widget_auth.rs
rust/smooth-operator/src/tools/: fetch_url.rs  github_search.rs  identity_intake.rs  interaction.rs  knowledge_search.rs  mod.rs
rust/smooth-operator/tests/: knowledge_chat_turn.rs  telemetry.rs
(+495 files in other folders)
