[workspace]
resolver = "2"
members = [
    "smooth-operator-agent-core",
    "adapters/in-memory",
    "adapters/postgres",
    "adapters/dynamodb",
    "smooth-operator-agent-server",
    "smooth-operator-agent-lambda",
    "evals",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/SmooAI/smooth-operator-agent"

[workspace.dependencies]
# Reference core depends on the agent engine.
# TODO: switch to crates.io once smooth-operator is published (roadmap Phase 0)
smooai-smooth-operator = { path = "../../smooth-operator/rust/smooth-operator" }
smooth-operator-agent-core = { package = "smooai-smooth-operator-agent-core", path = "smooth-operator-agent-core" }

async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
