[workspace]
resolver = "2"
members = [
    "smooth-operator",
    "adapters/in-memory",
    "adapters/postgres",
    "adapters/dynamodb",
    "adapters/backplane-redis",
    "adapters/backplane-nats",
    "smooth-operator-server",
    "smooth-operator-lambda",
    "ingestion",
    "evals",
    "examples/dev-support",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/SmooAI/smooth-operator"

[workspace.dependencies]
# Reference core depends on the agent engine. The core is published to crates.io
# (SmooAI/smooth-operator-core, 0.14). The `path` is kept for local two-repo dev
# (sibling checkout); `version` is what the PUBLISHED crates reference, so these
# crates can ship to crates.io (roadmap Phase 0). When the sibling checkout is
# absent, cargo resolves the version from crates.io.
smooai-smooth-operator-core = { path = "../../smooth-operator-core/rust/smooth-operator-core", version = "0.15" }
# Intra-workspace dep on the reference lib carries its version so the adapters /
# ingestion / server that depend on it are publishable (path = local dev,
# version = the crates.io requirement).
smooth-operator = { package = "smooai-smooth-operator", path = "smooth-operator", version = "1.17.0" }

async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
# HTTP client for the `fetch_url` built-in tool. rustls to match the engine's
# reqwest (no native-tls), default-features off to avoid pulling OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# URL parsing for the `fetch_url` SSRF guard (host extraction + IP checks).
url = "2"
# GitHub API client for the `github` connector + `github_search` tool. Defaults
# to rustls (rustls-ring) + jwt-rust-crypto — no OpenSSL, matching the rest of
# the workspace's no-native-tls posture. `.base_uri(...)` lets tests point it at
# a mock server (octocrab's own test-suite drives it the same way).
octocrab = { version = "0.53", default-features = false, features = [
    "default-client",
    "follow-redirect",
    "retry",
    "rustls",
    "rustls-ring",
    "timeout",
    "tracing",
    "stream",
    "jwt-rust-crypto",
] }
# Building a GitHub-App `EncodingKey` from a PEM private key (octocrab's
# `.app(app_id, key)` takes a `jsonwebtoken::EncodingKey`). Pinned + featured to
# match octocrab's own jsonwebtoken (v10, rust_crypto, no aws-lc / OpenSSL).
jsonwebtoken = { version = "10", default-features = false, features = [
    "use_pem",
    "rust_crypto",
] }
# Decoding base64 blob bodies from the GitHub contents API.
base64 = "0.22"
# HMAC-SHA256 for embeddable-widget authContext verification (widget_auth).
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# Mock GitHub API server for the offline connector contract test.
wiremock = "0.6"
# rustls is in the graph twice (octocrab's hyper-rustls + reqwest), and the
# workspace also pulls aws-lc-rs (via the OTLP/tonic stack) alongside ring — so
# rustls 0.23 can't auto-pick a process-level CryptoProvider. The GitHub client
# installs the `ring` provider explicitly (once) before building; this dep gives
# us that API. Pinned to the same rustls the rest of the graph resolves to.
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# --- OpenTelemetry GenAI instrumentation (telemetry.rs) ---
# Pinned compatible set: tracing-opentelemetry 0.33 ↔ opentelemetry/_sdk/-otlp 0.32.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.33"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
    "trace",
    "grpc-tonic",
] }
