[package]
name = "smooai-smooth-operator-agent-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference core for smooth-operator-agent: domain model + StorageAdapter seam over smooth-operator."

[lib]
name = "smooth_operator_agent_core"

[dependencies]
# TODO: switch to crates.io once smooth-operator is published (roadmap Phase 0)
smooai-smooth-operator = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
# `fetch_url` built-in tool: HTTP GET + URL parsing for the SSRF guard.
reqwest = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
# Integration tests drive the runtime through the in-memory adapter (the
# conformance baseline). Dev-dep only — the lib has no backend dependency.
smooai-smooth-operator-agent-adapter-memory = { path = "../adapters/in-memory" }
# The live-gateway e2e test (`tests/e2e_llm_smoo_ai.rs`) consumes the engine's
# `LlmClient::chat_stream` response, which is a `futures::Stream`.
futures-util = "0.3"
