[package]
name = "smooai-smooth-operator-agent-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference core for smooth-operator-agent: domain model + StorageAdapter seam over smooth-operator."

[lib]
name = "smooth_operator_agent_core"

[dependencies]
# TODO: switch to crates.io once smooth-operator is published (roadmap Phase 0)
smooai-smooth-operator = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
# `fetch_url` built-in tool: HTTP GET + URL parsing for the SSRF guard.
reqwest = { workspace = true }
url = { workspace = true }

# OpenTelemetry GenAI instrumentation (`telemetry.rs`): tracing spans mapped to
# OTLP via tracing-opentelemetry. The OTLP exporter is gated on
# OTEL_EXPORTER_OTLP_ENDPOINT so tests/binaries never need a live collector.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
# The telemetry TDD test installs a capturing tracing layer to assert on the
# recorded `gen_ai.*` span fields without a live OTLP collector.
tracing-subscriber = { workspace = true }
# Integration tests drive the runtime through the in-memory adapter (the
# conformance baseline). Dev-dep only — the lib has no backend dependency.
smooai-smooth-operator-agent-adapter-memory = { path = "../adapters/in-memory" }
# The live-gateway e2e test (`tests/e2e_llm_smoo_ai.rs`) consumes the engine's
# `LlmClient::chat_stream` response, which is a `futures::Stream`.
futures-util = "0.3"
