[package]
name = "smooai-smooth-operator-server"
version = "1.11.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Reference WebSocket service for smooth-operator — speaks the schema-driven protocol over a smooth-operator KnowledgeChatRuntime."

[lib]
name = "smooth_operator_server"

[[bin]]
name = "smooth-operator-server"
path = "src/main.rs"

[features]
# `default = ["cloud"]` keeps every cloud adapter compiled in, so any build that
# does NOT pass `--no-default-features` (the K8s Dockerfile, the SST/lambda crate,
# CI) is byte-for-byte unchanged. A lean local/embed build opts out with
# `--no-default-features`, dropping tokio-postgres / the AWS SDK / redis / nats and
# running entirely on the always-present in-memory storage + backplane.
default = ["cloud"]
cloud = ["postgres", "dynamodb", "redis", "nats"]
# `postgres` also enables the gateway-backed embedder/reranker (they live in the
# postgres adapter crate), i.e. the semantic-retrieval path; without it the lean
# build uses the network-free DeterministicEmbedder / Noop|Lexical reranker.
postgres = ["dep:smooai-smooth-operator-adapter-postgres"]
dynamodb = ["dep:smooai-smooth-operator-adapter-dynamodb"]
redis = ["dep:smooai-smooth-operator-adapter-backplane-redis"]
nats = ["dep:smooai-smooth-operator-adapter-backplane-nats"]

[dependencies]
smooth-operator = { workspace = true }
smooai-smooth-operator-core = { workspace = true }
# In-memory storage + backplane — ALWAYS included. The local-flavor default and
# the lean (`--no-default-features`) build run entirely on these.
smooai-smooth-operator-adapter-memory = { path = "../adapters/in-memory", version = "1.11.4" }
# Persistent storage + admin-store backends, selected at runtime to match the
# configured storage backend (Postgres / DynamoDB; default in-memory). Optional:
# gated behind the `postgres` / `dynamodb` features so a lean local/embed build
# can exclude tokio-postgres / the AWS SDK. The `postgres` crate also provides the
# gateway-backed embedder/reranker, so the `postgres` feature additionally enables
# the semantic-retrieval path in `embedder.rs` / `reranker.rs`.
smooai-smooth-operator-adapter-postgres = { path = "../adapters/postgres", version = "1.11.4", optional = true }
smooai-smooth-operator-adapter-dynamodb = { path = "../adapters/dynamodb", version = "1.11.4", optional = true }
# Distributed Backplane backends for horizontal scale-out, selected at runtime
# via SMOOTH_AGENT_BACKPLANE (default in-memory / single-process). Optional: gated
# behind the `redis` / `nats` features so a lean build excludes their drivers.
smooai-smooth-operator-adapter-backplane-redis = { path = "../adapters/backplane-redis", version = "1.11.4", optional = true }
smooai-smooth-operator-adapter-backplane-nats = { path = "../adapters/backplane-nats", version = "1.11.4", optional = true }
# Admin API surfaces indexing-run status via the ingestion crate's IndexingStore.
smooai-smooth-operator-ingestion = { path = "../ingestion", version = "1.11.4" }

async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
# CancellationToken backs the graceful SIGTERM/ctrl_c drain: one shared token on
# AppState fans cancellation out to every per-connection reader loop so an
# in-flight turn finishes, the loop exits, and the connection detaches from the
# backplane (no stale registry entries) before the process exits.
tokio-util = "0.7"

axum = { version = "0.8", features = ["ws"] }
# CORS for the `/admin` HTTP API: the local-flavor daemon's smooth-web SPA does a
# best-effort cross-origin `GET /admin/me` from the Vite dev origin
# (http://localhost:3100) to show the live model/identity in its header. The local
# flavor is loopback/tailnet-only + token-authed, so a permissive CORS on `/admin`
# is acceptable. (`/ws` needs no CORS — a WebSocket handshake isn't subject to the
# CORS preflight.)
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# `GET /admin/model-costs` fetches the LLM gateway's `/v1/model/info` (the same
# gateway base url + key the turns use) to surface per-model pricing for cost
# badges. Workspace reqwest is rustls-only (no OpenSSL); `json` adds response
# deserialization. reqwest is already in the dependency graph via the core crate.
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
tokio-tungstenite = "0.26"
futures-util = "0.3"
# Admin-API integration tests drive the axum router in-process via
# `tower::ServiceExt::oneshot` and read response bodies with `http-body-util`.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Sign HS256 test tokens to exercise the real JwtVerifier through the routes.
jsonwebtoken = { workspace = true }
# Encode the base64url(JSON) forwarded-identity blob in the trusted-mode ACL test.
base64 = { workspace = true }
