[package]
name = "smooai-smooth-operator-adapter-backplane-nats"
version = "1.25.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "NATS-backed distributed Backplane for smooth-operator — cross-pod WebSocket event fan-out over NATS subjects (scale-out + a shared event bus)."

[lib]
name = "smooth_operator_adapter_backplane_nats"

[dependencies]
smooth-operator = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
# NATS client (rustls by default — no OpenSSL, matching the workspace posture).
async-nats = "0.38"

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
# Throwaway NATS for the cross-pod fan-out integration test; skips when Docker
# is unavailable so CI without a daemon stays green (mirrors the PG adapter).
testcontainers = "0.24"
