[package]
name = "smooai-smooth-operator-adapter-backplane-redis"
version = "1.36.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Redis/Valkey-backed distributed Backplane for smooth-operator — cross-pod WebSocket event fan-out over Redis pub/sub (the horizontal scale-out seam)."

[lib]
name = "smooth_operator_adapter_backplane_redis"

[dependencies]
smooth-operator = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
# Async Redis/Valkey client + pub/sub (tokio-comp pulls the `aio` async API,
# incl. `get_async_pubsub`). No TLS feature → no OpenSSL; in-cluster Valkey is
# plaintext. A host needing TLS enables a redis TLS feature in its own build.
redis = { version = "0.27", features = ["tokio-comp"] }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
# Throwaway Redis for the cross-pod fan-out integration test; skips when Docker
# is unavailable so CI without a daemon stays green (mirrors the PG adapter).
testcontainers = "0.24"
