[package]
name = "smooai-smooth-operator-adapter-dynamodb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DynamoDB single-table StorageAdapter for smooth-operator — the AWS-serverless backend (DynamoDB OLTP + checkpoints, S3 Vectors / brute-force DynamoDB knowledge retrieval)."

[lib]
name = "smooth_operator_adapter_dynamodb"

[features]
default = []
# Wires the S3 Vectors knowledge backend (aws-sdk-s3vectors, GA 2025-12).
s3-vectors = ["dep:aws-sdk-s3vectors", "dep:aws-smithy-types"]

[dependencies]
smooth-operator = { workspace = true }
smooai-smooth-operator-core = { workspace = true }
# IndexingStore / IndexingRun for the persistent admin indexing-runs store.
smooai-smooth-operator-ingestion = { path = "../../ingestion" }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# Async OLTP CRUD + checkpoints over a single DynamoDB table.
aws-config = "1"
aws-sdk-dynamodb = "1"
# Optional dense-retrieval backend (S3 Vectors). Off by default — the
# brute-force DynamoDB knowledge path needs no extra services and is what the
# conformance test exercises. See `knowledge.rs` for the S3 Vectors situation.
aws-sdk-s3vectors = { version = "1", optional = true }
# Smithy `Document` type used for S3 Vectors vector metadata (only with s3-vectors).
aws-smithy-types = { version = "1", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
# Throwaway amazon/dynamodb-local for the conformance integration test.
testcontainers = "0.24"
