[package]
name = "smooai-smooth-operator-adapter-memory"
version = "1.22.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "In-memory StorageAdapter for smooth-operator — the conformance/test baseline."

[lib]
name = "smooth_operator_adapter_memory"

[dependencies]
smooth-operator = { workspace = true }
smooai-smooth-operator-core = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
