[package]
name = "smooai-smooth-operator-adapter-postgres"
version = "1.24.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Postgres + pgvector StorageAdapter for smooth-operator — the dogfood backend (Postgres OLTP, PostgresCheckpointStore, pgvector hybrid retrieval)."

[lib]
name = "smooth_operator_adapter_postgres"

[dependencies]
smooth-operator = { workspace = true }
# `postgres` feature pulls in PostgresCheckpointStore (sync r2d2 path).
smooai-smooth-operator-core = { workspace = true, features = ["postgres"] }
# IndexingStore / IndexingRun for the persistent admin indexing-runs store.
smooai-smooth-operator-ingestion = { path = "../../ingestion", version = "1.24.0" }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Async OLTP CRUD (conversations / participants / messages / sessions / knowledge).
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
deadpool-postgres = "0.14"
# Optional gateway-backed embeddings (OpenAI-compatible /v1/embeddings).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
# Throwaway pgvector-enabled Postgres for the conformance integration test.
testcontainers = "0.24"
