[package]
name = "smooai-smooth-operator-example-dev-support"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Showcase example: stand up a dev-team knowledge & support agent over a GitHub repo in minutes — ingest (prose/code/issues) then chat grounded in the repo, with live github_search."

[[bin]]
name = "dev-support"
path = "src/main.rs"

[lib]
name = "dev_support"
path = "src/lib.rs"

[dependencies]
# The agent engine + runtime primitives, knowledge tools, in-memory adapter.
smooth-operator = { workspace = true }
smooai-smooth-operator-core = { workspace = true }
smooai-smooth-operator-adapter-memory = { path = "../../adapters/in-memory" }
# Ingestion pipeline + the GitHub connector + the deterministic embedder.
smooai-smooth-operator-ingestion = { path = "../../ingestion" }
# The shared embedder selector (real GatewayEmbedder when keyed, deterministic
# fallback otherwise) lives in the server lib so the `/index` handler and this
# example pick the embedder — and its dimension — in exactly one place.
smooai-smooth-operator-server = { path = "../../smooth-operator-server" }

async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
# CLI argument parsing for the `ingest` / `chat` / `serve` subcommands.
clap = { version = "4", features = ["derive", "env"] }
# Parse the dev-support.toml config file.
toml = "0.8"
# tracing init for optional OTel + readable logs.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Drive the smoke test with the engine's scripted MockLlmClient (no network).
smooai-smooth-operator-core = { workspace = true }
