[package]
name = "smooai-smooth-operator-example-dev-support"
version = "0.1.0"
# Example binary, not a consumable library — exclude from crates.io.
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Showcase example: stand up a dev-team knowledge & support agent over a GitHub repo in minutes — ingest (prose/code/issues) then chat grounded in the repo, with live github_search."

[[bin]]
name = "dev-support"
path = "src/main.rs"

[lib]
name = "dev_support"
path = "src/lib.rs"

[dependencies]
# The agent engine + runtime primitives, knowledge tools, in-memory adapter.
smooth-operator = { workspace = true }
smooai-smooth-operator-core = { workspace = true }
smooai-smooth-operator-adapter-memory = { path = "../../adapters/in-memory" }
# Optional Postgres (pgvector) persistence for `serve` — when SMOOTH_AGENT_STORAGE
# selects it, the ingested repo survives a restart. In-memory is the default.
smooai-smooth-operator-adapter-postgres = { path = "../../adapters/postgres" }
# Ingestion pipeline + the GitHub connector + the deterministic embedder.
smooai-smooth-operator-ingestion = { path = "../../ingestion" }
# The shared embedder selector (real GatewayEmbedder when keyed, deterministic
# fallback otherwise) lives in the server lib so the `/index` handler and this
# example pick the embedder — and its dimension — in exactly one place.
smooai-smooth-operator-server = { path = "../../smooth-operator-server" }

async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
# CLI argument parsing for the `ingest` / `chat` / `serve` subcommands.
clap = { version = "4", features = ["derive", "env"] }
# Parse the dev-support.toml config file.
toml = "0.8"
# tracing init for optional OTel + readable logs.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Drive the smoke test with the engine's scripted MockLlmClient (no network).
smooai-smooth-operator-core = { workspace = true }
# Drive the serve smoke test's WebSocket turn over a real client (no network
# beyond loopback) — same client the server crate's protocol tests use.
tokio-tungstenite = "0.26"
futures-util = "0.3"
uuid = { workspace = true }
chrono = { workspace = true }
